--- a/requirements.txt
+++ b/requirements.txt
@@ -13,43 +13,60 @@ click==8.1.7
 dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
+Faker==30.8.2
 fastapi==0.115.3
 fastapi-cli==0.0.5
 frozenlist==1.5.0
+gcloud==0.18.3
 GeoAlchemy2==0.15.2
+googleapis-common-protos==1.65.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.6
+httplib2==0.22.0
 httptools==0.6.4
 httpx==0.27.2
 idna==3.10
 ipinfo==5.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jws==0.1.3
 Mako==1.3.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 multidict==6.1.0
+numpy==2.2.1
+oauth2client==4.1.3
 orjson==3.10.10
 packaging==24.1
 passlib==1.7.4
 propcache==0.2.0
+protobuf==5.29.0rc2
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycryptodome==3.21.0
 pydantic==2.9.2
 pydantic-extra-types==2.9.0
 pydantic-settings==2.6.0
 pydantic_core==2.23.4
 Pygments==2.18.0
+pyparsing==3.2.0
+Pyrebase4==4.8.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-jose==3.3.0
+python-jwt==2.0.1
 python-multipart==0.0.12
 PyYAML==6.0.2
 requests==2.32.3
+requests-toolbelt==0.10.1
 rich==13.9.3
 rsa==4.9
+setuptools==75.4.0
+shapely==2.0.6
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -58,7 +75,7 @@ starlette==0.41.0
 typer==0.12.5
 typing_extensions==4.12.2
 ujson==5.10.0
-urllib3==2.2.3
+urllib3==1.26.20
 uvicorn==0.32.0
 uvloop==0.21.0
 watchfiles==0.24.0
